Bugfix: long messages could overflow

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -171,6 +171,10 @@ main {
     flex-direction: column;
 }
 
+.chat-item-text-description {
+    word-break: break-word;
+}
+
 .chat-item-text-extras {
     margin-top: 5px;
     font-size: 0.8rem;
